<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddTodoActivity"
    android:orientation="vertical"
    android:background="#73C3F9"
    android:padding="@dimen/_20sdp">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:hint="@string/enter_your_todo_head"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:paddingStart="@dimen/_10sdp"
        android:background="@drawable/blue_border"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etNoteDetails"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:hint="@string/enter_your_todo_details"
        android:padding="@dimen/_10sdp"
        android:gravity="top"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/blue_border"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDatePicker"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:background="@drawable/blue_border"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/enter_todo_date"
        android:textColorHint="@color/white"
        android:gravity="center_vertical"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/avnir_hevy"
        android:textColor="@color/white"
        android:paddingStart="@dimen/_10sdp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAddTodo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/border_grey"
        android:layout_margin="@dimen/_15sdp"
        android:textColor="#73C3F9"
        android:text="@string/add_todo"
        android:gravity="center"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/avnir_hevy"/>
</androidx.appcompat.widget.LinearLayoutCompat>