<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:textSize="@dimen/_25ssp"
        android:fontFamily="@font/avnir_hevy"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_47sdp"
        android:layout_marginStart="@dimen/_20sdp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/avenir_roman"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:layout_constraintStart_toStartOf="@+id/ivLogo"/>
    <EditText
        android:id="@+id/etSignEmail"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        app:layout_constraintStart_toStartOf="@id/tvEmailTitle"
        app:layout_constraintTop_toBottomOf="@id/tvEmailTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="Enter your Email"
        android:textColor="@color/black"
        android:layout_marginEnd="@dimen/_25sdp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/avenir_roman"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/etSignEmail"
        app:layout_constraintStart_toStartOf="@+id/etSignEmail"/>
    <EditText
        android:id="@+id/etSignPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/tvPasswordTitle"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="Enter your password"
        android:layout_marginEnd="@dimen/_25sdp"/>

    <ImageView
        android:id="@+id/ivSignPassHide"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:src="@drawable/pass_hide"
        app:layout_constraintTop_toTopOf="@id/etSignPassword"
        android:layout_marginEnd="@dimen/_2sdp"
        app:layout_constraintBottom_toBottomOf="@id/etSignPassword"
        app:layout_constraintEnd_toEndOf="@id/etSignPassword"/>

    <ImageView
        android:id="@+id/ivSignPassShow"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:src="@drawable/ic_view"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/etSignPassword"
        android:layout_marginEnd="@dimen/_2sdp"
        app:layout_constraintBottom_toBottomOf="@id/etSignPassword"
        app:layout_constraintEnd_toEndOf="@id/etSignPassword"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvConfirmPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/avenir_roman"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/etSignPassword"
        app:layout_constraintStart_toStartOf="@+id/etSignPassword"/>
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        app:layout_constraintStart_toStartOf="@id/tvConfirmPasswordTitle"
        app:layout_constraintTop_toBottomOf="@id/tvConfirmPasswordTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:hint="Enter your password"
        android:layout_marginEnd="@dimen/_25sdp"/>

    <ImageView
        android:id="@+id/ivSignConfirmPassHide"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:src="@drawable/pass_hide"
        app:layout_constraintTop_toTopOf="@id/etConfirmPassword"
        android:layout_marginEnd="@dimen/_2sdp"
        app:layout_constraintBottom_toBottomOf="@id/etConfirmPassword"
        app:layout_constraintEnd_toEndOf="@id/etConfirmPassword"/>

    <ImageView
        android:id="@+id/ivSignConfirmPassShow"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:src="@drawable/ic_view"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/etConfirmPassword"
        android:layout_marginEnd="@dimen/_2sdp"
        app:layout_constraintBottom_toBottomOf="@id/etConfirmPassword"
        app:layout_constraintEnd_toEndOf="@id/etConfirmPassword"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSignUpToSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/etSignPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUp"
        android:textSize="@dimen/_12ssp"
        android:textColor="#080040"
        android:layout_marginTop="@dimen/_15sdp"
        app:fontFamily="@font/avnir_hevy"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/_14sdp"
        android:text="@string/don_t_have_an_account_sign_im"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSignUp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_40sdp"
        android:background="@drawable/border_blue_round_shape_circle_size"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword"/>

</androidx.constraintlayout.widget.ConstraintLayout>