<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:elevation="@dimen/_5sdp"
        android:src="@drawable/list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSignInTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:textStyle="bold"
        android:text="Sign In"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/ccEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:elevation="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignInTitle">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEmailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="@dimen/_12ssp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_17sdp"
                    android:layout_height="@dimen/_17sdp"
                    android:src="@drawable/mail" />

                <EditText
                    android:id="@+id/etLoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="@android:color/transparent"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tvEmailTitle"
                    app:layout_constraintTop_toBottomOf="@id/tvEmailTitle" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/ccPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:elevation="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="@+id/ccEmail"
        app:layout_constraintTop_toBottomOf="@+id/ccEmail">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"

            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPasswordTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@id/tvPasswordTitle"
                app:layout_constraintTop_toBottomOf="@id/tvPasswordTitle">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/padlock" />

                <EditText
                    android:id="@+id/etLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="@android:color/transparent"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/black"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <ImageView
                android:id="@+id/ivVHide"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/pass_hide"
                app:layout_constraintBottom_toBottomOf="@id/llPassword"
                app:layout_constraintEnd_toEndOf="@id/llPassword"
                app:layout_constraintTop_toTopOf="@id/llPassword" />

            <ImageView
                android:id="@+id/ivPView"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/ic_view"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/llPassword"
                app:layout_constraintEnd_toEndOf="@id/llPassword"
                app:layout_constraintTop_toTopOf="@id/llPassword" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvForgetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_3sdp"
        android:text="Forgot Password"
        android:textSize="@dimen/_10ssp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/ccPassword"
        app:layout_constraintTop_toBottomOf="@id/ccPassword" />

    <androidx.cardview.widget.CardView
        android:id="@+id/ccToken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ccPassword"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_15sdp"
        android:visibility="gone"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your Token"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:textColorHint="@color/black"
            android:layout_marginBottom="@dimen/_10sdp"/>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSignIn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_40sdp"
        android:background="@drawable/border_blue_round_shape_circle_size"
        android:textStyle="bold"
        android:gravity="center"
        android:text="Sign In"
        android:textColor="#ffffff"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ccToken" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvSignIn"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/don_t_have_an_account_sign_up"/>
</androidx.constraintlayout.widget.ConstraintLayout>